# agent-task-metering

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BILLING_DIMENSIONS.md  MARKETPLACE_CHECKLIST.md  README.md  REUSE.md  audit-logging.md
examples/: basic_usage.py  hourly_aggregation.py
examples/quickstart/: README.md  run_quickstart.py
infra/: Dockerfile
src/: Dockerfile
src/agent_task_metering/: __init__.py  audit_logger.py  mcp_tools.json  meter.py  models.py  openapi.json
src/agent_task_metering/evaluation/: __init__.py  api.py  audit.py  contract.py  evaluator.py  models.py
src/agent_task_metering/metering/: __init__.py  client.py
tests/: test_audit_logging.py  test_evaluation_api.py  test_evaluation_contract.py  test_evaluation_evaluator.py  test_evaluation_models.py  test_mcp_endpoints.py  test_meter.py  test_metering.py  test_models.py
